--- a/ASPNETCore App/src/WebApplication1/Views/Home/Index.cshtml
+++ b/ASPNETCore App/src/WebApplication1/Views/Home/Index.cshtml
@@ -1,10 +1,9 @@
 ﻿<html>
-
 <head>
-    <title>My View Page</title>
+    <title>Hello</title>
     <link href="~/css/style.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>Hello from ASP.NET Core!!</h1>
+    <h1>Hello CodeGarden!!</h1>
 </body>
 </html>
